[gd_scene load_steps=42 format=3 uid="uid://d3rhws3jtyjc0"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_qa2s4"]
[ext_resource type="Texture2D" uid="uid://dcvfd2ha41toi" path="res://assets/Free/Main Characters/Ninja Frog/Hit (32x32).png" id="2_stq7f"]
[ext_resource type="Texture2D" uid="uid://b3v4bbunde68q" path="res://assets/Free/Main Characters/Ninja Frog/Fall (32x32).png" id="3_2ty3i"]
[ext_resource type="Texture2D" uid="uid://cg8cq07e4pdkw" path="res://assets/Free/Main Characters/Ninja Frog/Idle (32x32).png" id="4_ddkiw"]
[ext_resource type="Texture2D" uid="uid://c7aj800xm5s11" path="res://assets/Free/Main Characters/Ninja Frog/Jump (32x32).png" id="5_5yb66"]
[ext_resource type="Texture2D" uid="uid://c0w5enp6ahbua" path="res://assets/Free/Main Characters/Ninja Frog/Run (32x32).png" id="6_frslt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l2rsr"]
atlas = ExtResource("2_stq7f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd6fa"]
atlas = ExtResource("2_stq7f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yk8a"]
atlas = ExtResource("2_stq7f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m4a1"]
atlas = ExtResource("2_stq7f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee30v"]
atlas = ExtResource("2_stq7f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry6rm"]
atlas = ExtResource("2_stq7f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bqjc"]
atlas = ExtResource("2_stq7f")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxht8"]
atlas = ExtResource("3_2ty3i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oty3h"]
atlas = ExtResource("4_ddkiw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyh5t"]
atlas = ExtResource("4_ddkiw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf22n"]
atlas = ExtResource("4_ddkiw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8vmu"]
atlas = ExtResource("4_ddkiw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ndp7"]
atlas = ExtResource("4_ddkiw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1bfj"]
atlas = ExtResource("4_ddkiw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbgqe"]
atlas = ExtResource("4_ddkiw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dddub"]
atlas = ExtResource("4_ddkiw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf3ho"]
atlas = ExtResource("4_ddkiw")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi03a"]
atlas = ExtResource("4_ddkiw")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp5sw"]
atlas = ExtResource("4_ddkiw")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv1t7"]
atlas = ExtResource("5_5yb66")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5b4g"]
atlas = ExtResource("6_frslt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew7mv"]
atlas = ExtResource("6_frslt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytvy6"]
atlas = ExtResource("6_frslt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w0o"]
atlas = ExtResource("6_frslt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggdg6"]
atlas = ExtResource("6_frslt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpd7b"]
atlas = ExtResource("6_frslt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndk1g"]
atlas = ExtResource("6_frslt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8pxk"]
atlas = ExtResource("6_frslt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27wg6"]
atlas = ExtResource("6_frslt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxanj"]
atlas = ExtResource("6_frslt")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rur1"]
atlas = ExtResource("6_frslt")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls1uv"]
atlas = ExtResource("6_frslt")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h4els"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2rsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd6fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yk8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee30v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry6rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bqjc")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxht8")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oty3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyh5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf22n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8vmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ndp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1bfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbgqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dddub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf3ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi03a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp5sw")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv1t7")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5b4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew7mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytvy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggdg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpd7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndk1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8pxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27wg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxanj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rur1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls1uv")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5mhtt"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jln6"]
size = Vector2(10, 3)

[node name="Player" type="CharacterBody2D"]
position = Vector2(2, 2)
collision_mask = 31
platform_floor_layers = 4294967044
platform_wall_layers = 4
script = ExtResource("1_qa2s4")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -4)
scale = Vector2(0.742188, 0.671875)
sprite_frames = SubResource("SpriteFrames_h4els")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -2)
shape = SubResource("CapsuleShape2D_5mhtt")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 7.5)
shape = SubResource("RectangleShape2D_1jln6")

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
